fixed unresponsive grid on mobile

--- a/style.css
+++ b/style.css
@@ -71,10 +71,10 @@ ul {
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 1rem;
   margin-top: 1rem;
-  flex-flow: wrap;
+ 
 }
 
 .card {
@@ -135,3 +135,7 @@ color: #FFF;
  
  
  }
+
+ /* media query */
+
+ 
